# pygeoapi-mssql-provider

./: .gitignore  README.md  azure-pipelines.yml  boka.config.yml  pyproject.toml  requirements.txt
pygeoapi_mssql_provider/: log.py  mssql.py
tests/: test_mssql.py  test_openapi.py  test_pygeoapi_mssql_provider.py
