[tool.poetry]
name = "pygeoapi-mssql-provider"
version = "0.1.0"
description = ""
authors = ["maarten-betman <maarten.betman@boskalis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geojson-pydantic = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
