[tool.poetry]
name = "pygeoapi-mssql-provider"
version = "0.1.0"
description = ""
authors = ["maarten-betman <maarten.betman@boskalis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geojson-pydantic = "^0.3.1"
pymssql = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Shapely = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
