[tool.poetry]
name = "pygeoapi-mssql-provider"
version = "0.1.3"
description = ""
authors = ["maarten-betman <maarten.betman@boskalis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymssql = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Shapely = "^1.7.1"
pytest-sugar = "^0.9.4"
pygeoapi = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
